--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
+
+
     testCompile 'junit:junit:4.12'
 }
