--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StationActivity"
+        <activity android:name=".view.StationFromActivity"
             android:label="@string/app_name"/>
-        <activity android:name=".StationInfoActivity"
+        <activity android:name=".view.StationToActivity"
+            android:label="@string/app_name"/>
+        <activity android:name=".view.StationInfoActivity"
             android:label="@string/app_name"/>
     </application>
 
